- Fixed incorrect use of readdir_r with dirent on Solaris that caused crash
- Added an option for manual output stream control
- Changed cppcms_make_key now written in C instead of unportable bash/od
- Fixed -- widgets are default constructable
- Added help to templates compiler, BSD bugfix
- Now session timeout is preserved withing session.
- Added "notriggers" to store cache functions as well
- Fixed incorrect triggers behavior in cache_iface.

Version 0.0.2
=============
